# AS_project_group_10

./: .gitignore  README.md  cyclonedds.xml
additional_info/: frames_2026-02-01_16.28.38.gv  frames_2026-02-17_20.00.49.gv
ros2_ws/: detected_objects.txt  frames_2026-02-12_11.34.46.gv
ros2_ws/.cache/clangd/index/: ObjectMappingToWorld.cpp.F6DAD61A5EC1CFC9.idx  TCPImageServer.cpp.67A10CEE2B61DE65.idx  TCPImageServer.h.A2ADBE9B00F0E4A9.idx  TCPStreamReader.cpp.57562DBF577BAAE4.idx  TCPStreamReader.h.FB04EED4784BFD8F.idx  actuators.hpp.AAA7A9FF9BB7B8AD.idx  actuators__builder.hpp.DC441EA42E7D66E9.idx  actuators__struct.hpp.D511B012842C10D1.idx  actuators__traits.hpp.E69728F62081D081.idx  actuators__type_support.hpp.4CF354B3428091B8.idx  attitude_thrust.hpp.952048E1EC0BE13C.idx  attitude_thrust__builder.hpp.417E207BD7174E26.idx  attitude_thrust__struct.hpp.121C4D71AC788027.idx  attitude_thrust__traits.hpp.4020591DD7DEA11F.idx  attitude_thrust__type_support.hpp.4371A45AC96E3D86.idx  common.hpp.55BEA0BB73326FD5.idx  controller_node.cpp.89B798AF53975B7D.idx  conversions.hpp.64C5E8FC3EFABAC4.idx  conversions.hpp.B205ED90C341DE83.idx  conversions_deprecated.hpp.7D71BE4BD2C948DF.idx  convolution.h.0F9BF9FA4016E567.idx  default_topics.hpp.37968A95854F7B5D.idx  default_values.hpp.EC0625B3ACFD4BF2.idx  depth_camera_parser.h.3801218EC5FD92B1.idx  dgramclient.hpp.93C9C0A35945431A.idx  eigen_mav_msgs.hpp.72B25CEF37CD44C7.idx  eigen_planning_msgs.hpp.3A39ADB03F8EB808.idx  exception.hpp.3A24D2DED5FC53A6.idx  exploration_manager.hpp.B9A40E1DD72A1415.idx  exploration_manager_node.cpp.360F9B1A2F750E8E.idx  exploration_types.hpp.ABA43125BCA40B1A.idx  extremum.h.21B0BD4026C1A675.idx  fisheye_camera_parser.h.DF510AA459A15CCA.idx  frontier_exploration.cpp.E2422584D263B069.idx  imu_parser.h.3F27C0EBD090C5B8.idx  inetbase.hpp.B5BDEF69F413435B.idx  inetclientdgram.hpp.689C5BC96209A78A.idx  inetclientstream.hpp.25B979955C10F50D.idx  inetdgram.hpp.D7B6F262BD8D7110.idx  inetserverstream.hpp.C5F6BB63CFBCA6FB.idx  (+99 more)
ros2_ws/src/basic_waypoint_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
ros2_ws/src/basic_waypoint_pkg/include/: planner.hpp
ros2_ws/src/basic_waypoint_pkg/launch/: waypoint_mission.launch.py
ros2_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc  trajectory_executor.cpp
ros2_ws/src/controller_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/controller_pkg/config/: controller_params.yaml
ros2_ws/src/controller_pkg/launch/: controller.launch.py
ros2_ws/src/controller_pkg/src/: controller_node.cpp
ros2_ws/src/mav_trajectory_generation/: CMakeLists.txt
ros2_ws/src/mav_trajectory_generation/include/mav_trajectory_generation/: trajectory_sampler_node.hpp
ros2_ws/src/mav_trajectory_generation/src/: trajectory_sampler_node.cpp
ros2_ws/src/multidim_rrt_cpp/src/: rrt2D.cpp
ros2_ws/src/navigation_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_pkg/launch/: frontier_exploration.launch.py  path_planner.launch.py
ros2_ws/src/navigation_pkg/src/: frontier_exploration.cpp  navigation_test.cpp  path_planner.cpp
ros2_ws/src/object_detection/: CMakeLists.txt  package.xml
ros2_ws/src/object_detection/launch/: object_detection.launch.py
ros2_ws/src/object_detection/src/: ObjectManager.cpp  ObjectManager.hpp  ObjectMappingToWorld.cpp
ros2_ws/src/occupancy_grid/: CMakeLists.txt  package.xml
ros2_ws/src/occupancy_grid/launch/: perception_with_packages.launch.py
ros2_ws/src/occupancy_grid/src/: pointcloud_outlier_filter.cpp
ros2_ws/src/octomap_mapping/octomap_server/: CMakeLists.txt
ros2_ws/src/octomap_mapping/octomap_server/include/octomap_server/: octomap_server.hpp
ros2_ws/src/octomap_mapping/octomap_server/launch/: octomap_mapping.launch.xml
ros2_ws/src/octomap_mapping/octomap_server/src/: octomap_server.cpp
ros2_ws/src/ompl_planner_pkg/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ompl_planner_pkg/config/: exploration_params.yaml
ros2_ws/src/ompl_planner_pkg/include/ompl_planner_pkg/: collision_checker.hpp  exploration_manager.hpp  exploration_types.hpp  rrt_path_planner.hpp
ros2_ws/src/ompl_planner_pkg/launch/: exploration.launch.py
ros2_ws/src/ompl_planner_pkg/src/: collision_checker.cpp  exploration_manager_node.cpp  rrt_path_planner_node.cpp
ros2_ws/src/perception_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/perception_pkg/launch/: perception_with_packages.launch.py
ros2_ws/src/perception_pkg/src/: pointcloud_outlier_filter.cpp
ros2_ws/src/simulation/: .gitignore  CMakeLists.txt
ros2_ws/src/simulation/launch/: perception_with_packages.launch.py  run_simulation.sh  simulation.launch.py  unity_ros.launch.py
ros2_ws/src/simulation/src/: depth_camera_parser.h  fisheye_camera_parser.h  imu_parser.h  pointcloud_to_occupancy_grid_node.cpp  rgb_camera_parser.h  true_state_parser.h  unity_ros.cpp  unity_state.cpp
ros2_ws/src/system_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/system_bringup/config/: default.rviz  default_object.rviz  perception_config.yaml  view_saved_octomap.rviz
ros2_ws/src/system_bringup/launch/: main.launch.py  view_saved_octomap.launch.py
ros2_ws/src/system_bringup/scripts/: wait_for_trajectory_finish.py
