<?xml version="1.0"?>
<package format="3">
  <name>navigation_pkg</name>
  <version>0.0.1</version>
  <description>Navigation utilities and frontier exploration node</description>

  <maintainer email="name@example.com">Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
