<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ompl_planner_pkg</name>
  <version>0.0.0</version>
  <description>Autonomous 3D cave exploration using frontier-based exploration and RRT* planning</description>
  <maintainer email="josef@example.com">Josef</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- Trajectory generation -->
  <depend>mav_msgs</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  
  <!-- 3D mapping and octomap -->
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>fcl</depend>
  
  <!-- RRT planning -->
  <!-- TODO: Add RRT* planning in Phase 2 -->
  
  
  <!-- Eigen for linear algebra -->
  <depend>Eigen</depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
